--- a/cartpole.ipynb
+++ b/cartpole.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?env.env"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -103,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First turn Catpols continues state space into discrete one. "
+    "Convert Catpoles continues state space into discrete one. "
    ]
   },
   {
@@ -254,7 +263,7 @@
     "        # insert random action\n",
     "        if np.random.random() < exploration_rate(e) : \n",
     "            action = env.action_space.sample() # explore \n",
-    "        \n",
+    "         \n",
     "        # increment enviroment\n",
     "        obs, reward, done, _ = env.step(action)\n",
     "        new_state = discretizer(*obs)\n",
@@ -269,7 +278,7 @@
     "        \n",
     "        # Render the cartpole environment\n",
     "        env.render()\n",
-    "\n",
+    "            \n",
     "\n",
     "            \n",
     "            "
